change lorem to 15w

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <button id="show">result</button>
 <p id="result"></p>
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, velit!
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione iure minus quae, consequatur praesentium aliquid?
+
 
 
 
